--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
   justify-content: center;
   position: relative;
   margin: auto;
-  height: 75%; /* lmao this is not responsive on mobile but i DONT CARE */
 }
 img {
   border-radius: 10px;
@@ -43,4 +42,10 @@ pre code {
   display: block;
   padding: 20px;
   border-radius: 5px;
+}
+
+@media only screen and (max-width: 800px) {
+  .parentcontainer {
+    width: 100%;
+  }
 }
